# jeod

./: .gitignore  .gitmodules  AGENTS.md  SPRINT_TRACKER.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
docs/Training/Exercises/Solutions/SIM_05/SET_test/RUN_test/: input.py
jeod_helpers/: CHANGELOG.md  README.md  __init__.py  builder.py  cli.py  events.py  gravity.py  states.py  vehicles.py
tests/: test_builder.py  test_cli.py  test_events.py  test_gravity.py  test_states.py  test_vehicles.py
