[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jeod_helpers"
version = "0.1.8"
description = "JEOD input helper utilities"
readme = "jeod_helpers/README.md"
license = {text = "NASA Open Source Agreement 1.3"}
authors = [{name = "JEOD Team"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: NASA Open Source Agreement 1.3",
]

# Additional project metadata
dependencies = []

[project.scripts]
jeod-helpers = "jeod_helpers.cli:main"
